--- a/templates/edt/base.html
+++ b/templates/edt/base.html
@@ -46,7 +46,7 @@
 					<ul role="menu" class="dropdown-menu">
 					  <li class="hvr-underline-from-center page-scroll"><a href="/permisolst/">Revisar permisos</a></li>
 					  <li class="hvr-underline-from-center page-scroll"><a href="/">Cargar Horario</a></li>
-					  <li><a href="#">link3</a></li>
+					  <li><a href="/genero/">Distribusión por Genero</a></li>
 					  <li class="divider"></li>
 					  <li class="dropdown-header">subtitulo</li>
 					  <li><a href="#">link4</a></li>
