--- a/templates/edt/comprobante.html
+++ b/templates/edt/comprobante.html
@@ -4,11 +4,14 @@
 {% block contenido %}
 <div id="permisousuario" class="msg-comprobante">
 <ul class="list-group">
-	<li class="list-group-item"><h4>Comprobante de permiso administrativo N° {{permiso.id}} </h4></li>
-	<li class="list-group-item">Solicitante : {{permiso.usuario.nombre}},{{permiso.usuario.apellido}}</li>
+	<li class="list-group-item"><h4>Comprobante de {{permiso.tipo}} N° {{permiso.id}} </h4></li>
+	<li class="list-group-item">Solicitante : {{permiso.usuario.nombre}} {{permiso.usuario.apellido1}}</li>
 	<li class="list-group-item">Rut : {{permiso.usuario.rut}}-{{permiso.usuario.dv}}</li>
 	<li class="list-group-item">Fecha Solicitud : {{permiso.fecha_creacion}}</li>
+	<li class="list-group-item">Motivo : {{permiso.motivo.nombre}}</li>
 	<li class="list-group-item">Cantidad de horas solcitadas : {{permiso.horas_solicitadas}}</li>
+	<li class="list-group-item">Devuelve Horas : {{permiso.devuelve_horas }}</li>
+	<li class="list-group-item">Con o sin goce de sueldo : {{permiso.sueldo }}</li>
 	<li class="list-group-item">Reemplazante : {{permiso.reemplazante}}</li>
 	<li class="list-group-item">Archivo Adjunto : {% if permiso.documento_adjunto.name %} <a target="_blank" href="/media/{{permiso.documento_adjunto}}">Ver Documento</a> {% else %} Sin documento adjunto{% endif %} </li>
 </ul>
@@ -19,7 +22,7 @@
 
 	<li class="list-group-item" >
 	<span class="badge">{{eventoObj.delta}}</span>
-		{{eventoObj.numero_evento.start|date:"M d"}}{{"   "}}{{eventoObj.numero_evento.start|date:"P"}}{{"-"}} {{eventoObj.numero_evento.end|date:"P"}}</li>
+		{{eventoObj.numero_evento.start|date:"D d M "}}{{"   "}}{{eventoObj.numero_evento.start|date:"G:i"}}{{"-"}} {{eventoObj.numero_evento.end|date:"G:i"}}</li>
 	{% endfor %}
 	<li class="list-group-item" >
 	<span class="badge">Total{{"  "}}{{permiso.horas_solicitadas}}</span>
