--- a/templates/edt/verpermiso.html
+++ b/templates/edt/verpermiso.html
@@ -4,21 +4,25 @@
 {% block contenido %}
 <div id="resolucion" class="msg-comprobante">
 <ul class="list-group">	
-<li class="list-group-item active"  ><h4 style="color:#FFFFFF !important;">Permiso administrativo N° {{permiso.id}} </h4></li>
-	<li class="list-group-item">Solicitante : {{permiso.usuario.nombre}},{{permiso.usuario.apellido}}</li>
+<li class="list-group-item active"  ><h4 style="color:#FFFFFF !important;">{{permiso.tipo}} N° {{permiso.id}} </h4></li>
+	<li class="list-group-item">Solicitante : {{permiso.usuario.nombre}},{{permiso.usuario.apellido1}}</li>
 	<li class="list-group-item">Rut : {{permiso.usuario.rut}}-{{permiso.usuario.dv}}</li>
 	<li class="list-group-item">Fecha Solicitud : {{permiso.fecha_creacion}}</li>
+	<li class="list-group-item">Motivo : {{permiso.motivo.nombre}}</li>
+	<li class="list-group-item">Comentario : {{permiso.comentario}}</li>
 	<li class="list-group-item">Cantidad de horas solcitadas : {{permiso.horas_solicitadas}}</li>
+	<li class="list-group-item">Devuelve Horas : {{permiso.get_devuelve_horas_display }}</li>
+	<li class="list-group-item">Con o sin goce de sueldo : {{permiso.get_sueldo_display }}</li>
 	<li class="list-group-item">Reemplazante : {{permiso.reemplazante}}</li>
 	<li class="list-group-item">Archivo Adjunto : {% if permiso.documento_adjunto.name %} <a target="_blank" href="/media/{{permiso.documento_adjunto}}">Ver Documento</a> {% else %} Sin documento adjunto{% endif %} </li>
 </ul>
 <ul class="list-group">
-	<li class="list-group-item active"  ><h4 style="color:#FFFFFF !important;">Detalle de Solicitud</h4></li>
+	<li class="list-group-item active"  ><h4 style="color:#FFFFFF !important;">Detalle </h4></li>
 	{% for eventoObj in permiso.eventos_en_permisos_set.all %}	
 
 	<li class="list-group-item" >
 	<span class="badge">{{eventoObj.delta}}</span>
-		{{eventoObj.numero_evento.start|date:"M d"}}{{"   "}}{{eventoObj.numero_evento.start|date:"P"}}{{"-"}} {{eventoObj.numero_evento.end|date:"P"}}</li>
+		{{eventoObj.numero_evento.start|date:"D d M "}}{{"   "}}{{eventoObj.numero_evento.start|date:"G:i"}}{{"-"}} {{eventoObj.numero_evento.end|date:"G:i"}}</li>
 	{% endfor %}
 	<li class="list-group-item" >
 	<span class="badge">Total{{"  "}}{{permiso.horas_solicitadas}}</span>
@@ -42,11 +46,14 @@
 		<input class="submit" type="submit" name="respuesta" id="rechaza" value="Rechazado"-->
 		<p class="resolut">
 		<label for="razon">Motivo:</label>
-		<textarea class="razon" ></textarea>
+		<textarea class="razon" name="razon"></textarea>
+
 		</p>
 		<div class="botones">
 		<button type="submit" value="Aprovado" name="respuesta" id="aprueba" class="btn btn-success ">Aprobar</button>
 		<button type="submit" value="Rechazado"  name="respuesta" id="rechaza" class="btn btn-danger ">Rechazar</button>
+	
+
 		</div>
 		</div>
 </p>
@@ -57,5 +64,6 @@
 
 
 </div>
+
 
 {% endblock %}
