--- a/templates/edt/base.html
+++ b/templates/edt/base.html
@@ -44,11 +44,11 @@
 				      <span class="icon-bar"></span>
 				      <span class="icon-bar"></span>
 				    </button>
-				    <a href="/" class="navbar-brand">SCA</a>
+				    <a href="/main/" class="navbar-brand">SCA</a>
 				  </div>
 				  <div class="navbar-collapse collapse">
 				    <ul class="nav navbar-nav">
-				      <li class="hvr-underline-from-center page-scroll"><a href="/">Inicio</a></li>
+				      <li class="hvr-underline-from-center page-scroll"><a href="/">Cargar Horario</a></li>
 				      <li class="hvr-underline-from-center page-scroll"><a href="/main/">Solicitar</a></li>
 				      <li class="dropdown">
 							<a aria-expanded="false" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#" class="hvr-underline-from-center">Utilidades<span class="caret"></span></a>
