algunos filtros en informes

--- a/templates/edt/base.html
+++ b/templates/edt/base.html
@@ -9,22 +9,23 @@
 	   <!--     <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
 		<!-- JS ###################################################################################-->
 		<script src="/static/js/bootstrap.js" /> </script>
-		<script src="/static/js/bootstrap-datepicker.js" /> </script>
+		 <script src="/static/js/jquery.timepicker.min.js" /> </script> 
 		<script src="/static/js/jquery.qtip.js" /> </script>
 		<link href="/static/css/print.css" rel="stylesheet" type="text/css" media="print" />
-		<!--<script type="text/javascript" src="/static/js/jquery.datetimepicker.js"></script> -->
-		<!--<script type="text/javascript" src="/static/js/jquery.alerts.js"></script>
-		<script type="text/javascript" src="/static/js/jquery.ui.draggable.js"></script>
-		<link rel="stylesheet" type="text/css" href="/static/css/jquery.datetimepicker.css"/ >-->
+		<script type="text/javascript" src="/static/js/jquery.periodpicker.full.min.js"></script>
+		<script src="/static/js/jquery.datetimepicker.full.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.alerts.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.ui.draggable.js"></script>		
 		<link rel='stylesheet' href='/static/fullcalendar/fullcalendar.css' />
 		<script src='/static/fullcalendar/lib/moment.min.js'></script>
 		<script src='/static/fullcalendar/fullcalendar.js'></script>
 		<script src='/static/fullcalendar/lang/es.js'></script>
+
 		<!-- CSS ################################################################################# -->
-		
+		<link rel="stylesheet" type="text/css" href="/static/css/jquery.periodpicker.min.css"/ >
 		<link rel="icon" href="/static/img/favicon.png" type="image/x-icon"/>
-		<!--<link rel="stylesheet" href="/static/css/jquery.alerts.css">-->
-		<link rel="stylesheet" href="/static/css/datepicker.css">
+		<link rel="stylesheet" href="/static/css/jquery.timepicker.css">
+		<link rel="stylesheet" href="/static/css/datepicker.css"> 
 		<link rel="stylesheet" href="/static/css/bootstrap.css">
 		<link rel="stylesheet" href="/static/css/style.css">
 		<link rel="stylesheet" href="/static/css/freelancer.css">
