--- a/templates/edt/main.html
+++ b/templates/edt/main.html
@@ -65,7 +65,7 @@ $(document).ready(function(){
 	       center: '',
 	       right:  'month agendaWeek agendaDay  prev,next'
 	       },
-       weekends: false,
+       weekends: true,
        businessHours:true, 
        businessHours:
 	       {
