--- a/static/css/style.css
+++ b/static/css/style.css
@@ -683,3 +683,47 @@ padding: 5px 5px 5px 25px;
 .fechas span {
 	height: 27px;
 }
+
+.filtros{
+	margin-left:10px; 
+
+}
+.filtros fieldset{
+	margin-bottom: 10px;
+}
+.filtros label{
+	font-size: 16px;
+	display: inline-block;
+	width: 230px;
+	height: 33px;
+  	margin-right:0.5em;
+  	padding-top:6px;
+  	text-align:left;  
+}
+.filtros select{
+	padding:3px;
+	margin-top: 5px;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+    -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+    box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+    background: #3498DB;
+    color:#000;
+    border:none;
+    outline:none;
+    display: inline-block;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+    cursor:pointer;
+    width: 200px;
+
+}
+.filtros li{
+
+}
+.botfiltro .btn {
+	width: 120px;
+}
